--- a/crossword/crossword04.html
+++ b/crossword/crossword04.html
@@ -17,7 +17,7 @@
 		<div id="explain">
 			<p>Today&rsquo;s crossword features guest clue-writer Esa Hall!</p>
 		</div>
-		<input id="dummyinput" onfocusout="deselect()"></input>
+		<input id="dummyinput" onfocusout="deselect()" oninput="dummyinput()"></input>
 		<table id="crossword">
 			<tr>
 				<td onclick="select(1)" id="1">&emsp;</td>
