--- a/crossword/crossword07.html
+++ b/crossword/crossword07.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<h1><a href="index.html">square crosswords</a></h1>
-		<input id="dummyinput" onfocusout="deselect()"></input>
+		<input id="dummyinput" onfocusout="deselect()" oninput="dummyinput()"></input>
 		<table id="crossword">
 			<tr>
 				<td onclick="select(1)" id="1">&emsp;</td>
