--- a/crossword/crossword11.html
+++ b/crossword/crossword11.html
@@ -76,6 +76,9 @@
 			<button onclick="redo()">redo</button>
 			</div>
 		</div>
+		<div id="mobilePreview" class="invisable">
+			<p id="previewBox">1.&emsp;Involuntary muscle contraction</p>
+		</div>
 	</body>
 </html>
 
