--- a/crossword/crossword12.html
+++ b/crossword/crossword12.html
@@ -76,6 +76,9 @@
 			<button onclick="redo()">redo</button>
 			</div>
 		</div>
+		<div id="mobilePreview" class="invisable">
+			<p id="previewBox">1.&emsp;Involuntary muscle contraction</p>
+		</div>
 	</body>
 	<script>
 		fetch("https://api.exchangerate-api.com/v4/latest/USD")
