--- a/crossword/crossword18.html
+++ b/crossword/crossword18.html
@@ -56,7 +56,7 @@
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
 			<p onclick="clue(1, true)">1.&emsp;It&rsquo;s uncommonly less cooked</p>
 			<p onclick="clue(6, true)">6.&emsp;These triangles are just so sweet-looking!</p>
-			<p onclick="clue(11, true)">7.&emsp;Go fast, shift into</p>
+			<p onclick="clue(11, true)">7.&emsp;Go fast and shift into</p>
 			<p onclick="clue(16, true)">8.&emsp;What it is to be nominated</p>
 			<p onclick="clue(21, true)">9.&emsp;Unspirited cereal</p>
 		</div>
