--- a/crossword/crossword19.html
+++ b/crossword/crossword19.html
@@ -56,14 +56,14 @@
 		<div id="across">
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
 			<p onclick="clue(1, true)">1.&emsp;Normally we would forbid shooting guns, but maybe if it&rsquo;s intended as a salute?</p>
-			<p onclick="clue(6, true)">6.&emsp;He lost the town&rsquo;s respect after doing it with wolves</p>
+			<p onclick="clue(6, true)">6.&emsp;He lost the town&rsquo;s respect after he did it with wolves</p>
 			<p onclick="clue(11, true)">7.&emsp;Did it 19 times before women could vote.</p>
 			<p onclick="clue(16, true)">8.&emsp;One of them is a space adventure. Two of them is a historical romance?</p>
 			<p onclick="clue(21, true)">9.&emsp;One can always be more liberated</p>
 		</div>
 		<div id="down">
 			<p><b>&emsp;&emsp;&emsp;Down</b></p>
-			<p onclick="clue(1, false)">1.&emsp;Winter rectangles</p>
+			<p onclick="clue(1, false)">1.&emsp;Winter rectangle</p>
 			<p onclick="clue(2, false)">2.&emsp;Clothes that reduce your risk of getting stab wounds</p>
 			<p onclick="clue(3, false)">3.&emsp;M&rsquo;lord</p>
 			<p onclick="clue(4, false)">4.&emsp;The place where things happen</p>
