--- a/crossword/crossword-example/index.html
+++ b/crossword/crossword-example/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="style.css"/>
 		<script src="script.js"></script>
 		<script src="crossword.js"></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1>
 		<link rel="shortcut icon" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<link rel="icon" type="../image/png" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 	</head>
