--- a/crossword/crossword20.html
+++ b/crossword/crossword20.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>5x5 crossword 19</title>
+		<title>5x5 crossword 20</title>
 		<link rel="stylesheet" href="style.css"/>
-		<script>let goal = "salvocriedamendroguefreer"; let crossnum = 18</script>
+		<script>let goal = "swamimasonoxidecedarknelt"; let crossnum = 19</script>
 		<script src="script.js"></script>
 		<link rel="shortcut icon" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<link rel="icon" type="../image/png" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=no">
-		<meta property="og:title" content="5x5 crossword 19" />
-		<meta property="og:description" content="The nineteenth five-by-five crossword in a series of twenty-five." />
+		<meta property="og:title" content="5x5 crossword 20" />
+		<meta property="og:description" content="The twentieth five-by-five crossword in a series of twenty-five." />
 		<meta property="og:image" content="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/preview.png" />
 	</head>
 	<body>
 		<h1 id="settings" onclick="opensettings()">&#9881;</h1><h1 id="backbutton"><a href="index.html">&#x279E;</a></h1>
-		<h1>crossword 19</h1>
+		<h1>crossword 20</h1>
+		<div id="explain">
+			<p>Whoops! All ridiculous clues!</p>
+		</div>
 		<input id="dummyinput" onfocusout="deselect()" oninput="dummyinput()"></input>
 		<table id="crossword">
 			<tr>
@@ -55,19 +58,19 @@
 		</table>
 		<div id="across">
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
-			<p onclick="clue(1, true)">1.&emsp;Normally we would forbid shooting guns, but maybe if it&rsquo;s intended as a salute?</p>
-			<p onclick="clue(6, true)">6.&emsp;He lost the town&rsquo;s respect after he did it with wolves</p>
-			<p onclick="clue(11, true)">7.&emsp;Did it 19 times before women could vote.</p>
-			<p onclick="clue(16, true)">8.&emsp;One of them is a space adventure. Two of them is a historical romance?</p>
-			<p onclick="clue(21, true)">9.&emsp;One can always be more liberated</p>
+			<p onclick="clue(1, true)">1.&emsp;She couldn't become a priest so she became Hindu</p>
+			<p onclick="clue(6, true)">6.&emsp;Set that jar free! Maybe he will form a secret society?</p>
+			<p onclick="clue(11, true)">7.&emsp;An <q>element</q> of marriage can be changing your last name?</p>
+			<p onclick="clue(16, true)">8.&emsp;When a tree falls, does it become a city? At one point, maybe an amusement park?</p>
+			<p onclick="clue(21, true)">9.&emsp;Maybe he was praying, or maybe he was talking to a child</p>
 		</div>
 		<div id="down">
 			<p><b>&emsp;&emsp;&emsp;Down</b></p>
-			<p onclick="clue(1, false)">1.&emsp;Winter rectangle</p>
-			<p onclick="clue(2, false)">2.&emsp;Clothes that reduce your risk of getting stab wounds</p>
-			<p onclick="clue(3, false)">3.&emsp;M&rsquo;lord</p>
-			<p onclick="clue(4, false)">4.&emsp;The place where things happen</p>
-			<p onclick="clue(5, false)">5.&emsp;What's stranger is how much it sounds like a water-loving mammal?</p>
+			<p onclick="clue(1, false)">1.&emsp;It was a <u>cover up</u>! There is a reason her clothes were so spotless!</p>
+			<p onclick="clue(2, false)">2.&emsp;Kind of like Lenin circa 1953 or a Babybel today?</p>
+			<p onclick="clue(3, false)">3.&emsp;<q>If you step that way you might be resigning</q> - spoken privately</p>
+			<p onclick="clue(4, false)">4.&emsp;Kind of like a drunken sailor or Bo Peep, <a href="https://www.youtube.com/watch?v=bvERHB02U6c" style="color: #0056b3; text-decoration: underline">as of recant?</a></p>
+			<p onclick="clue(5, false)">5.&emsp;Don't move, <u>He</u> doesn't move</p>
 		</div>
 		<div id="solved" class="invisable">
 			<div>
@@ -91,5 +94,4 @@
 		</div>
 	</body>
 </html>
-
 
