--- a/crossword/crossword19.html
+++ b/crossword/crossword19.html
@@ -67,7 +67,7 @@
 			<p onclick="clue(2, false)">2.&emsp;Clothes that reduce your risk of getting stab wounds</p>
 			<p onclick="clue(3, false)">3.&emsp;M&rsquo;lord</p>
 			<p onclick="clue(4, false)">4.&emsp;The place where things happen</p>
-			<p onclick="clue(5, false)">5.&emsp;What's stranger is how much it sounds like a water-loving mammal?</p>
+			<p onclick="clue(5, false)">5.&emsp;What&rsquo;s stranger is how much it sounds like a water-loving mammal?</p>
 		</div>
 		<div id="solved" class="invisable">
 			<div>
