--- a/crossword/crossword21.html
+++ b/crossword/crossword21.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>5x5 crossword 20</title>
+		<title>5x5 crossword 21</title>
 		<link rel="stylesheet" href="style.css"/>
-		<script>let goal = "swamimasonoxidecedarknelt"; let crossnum = 19</script>
+		<script>let goal = "basileludeapplecheerharry"; let crossnum = 20</script>
 		<script src="script.js"></script>
 		<link rel="shortcut icon" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<link rel="icon" type="../image/png" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=no">
-		<meta property="og:title" content="5x5 crossword 20" />
-		<meta property="og:description" content="The twentieth five-by-five crossword in a series of twenty-five." />
+		<meta property="og:title" content="5x5 crossword 21" />
+		<meta property="og:description" content="The twenty-first five-by-five crossword in a series of twenty-five." />
 		<meta property="og:image" content="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/preview.png" />
 	</head>
 	<body>
 		<h1 id="settings" onclick="opensettings()">&#9881;</h1><h1 id="backbutton"><a href="index.html">&#x279E;</a></h1>
-		<h1>crossword 20</h1>
-		<div id="explain">
-			<p>Whoops! All ridiculous clues!</p>
-		</div>
+		<h1>crossword 21</h1>
 		<input id="dummyinput" onfocusout="deselect()" oninput="dummyinput()"></input>
 		<table id="crossword">
 			<tr>
@@ -58,19 +55,19 @@
 		</table>
 		<div id="across">
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
-			<p onclick="clue(1, true)">1.&emsp;She couldn&rsquo;t become a priest so she became Hindu</p>
-			<p onclick="clue(6, true)">6.&emsp;Set that jar free! Maybe he will form a secret society?</p>
-			<p onclick="clue(11, true)">7.&emsp;An <q>element</q> of marriage can be changing your last name?</p>
-			<p onclick="clue(16, true)">8.&emsp;When a tree falls, does it become a city? At one point, maybe an amusement park?</p>
-			<p onclick="clue(21, true)">9.&emsp;Maybe he was praying, or maybe he was talking to a child</p>
+			<p onclick="clue(1, true)">1.&emsp;Needed to make pesto!</p>
+			<p onclick="clue(6, true)">6.&emsp;I had some ideas for this clue, but they all escape me</p>
+			<p onclick="clue(11, true)">7.&emsp;Making one of these products might require a corer or a parer to make.</p>
+			<p onclick="clue(16, true)">8.&emsp;Do it up, Charlie!</p>
+			<p onclick="clue(21, true)">9.&emsp;First name of my stylish policeman</p>
 		</div>
 		<div id="down">
 			<p><b>&emsp;&emsp;&emsp;Down</b></p>
-			<p onclick="clue(1, false)">1.&emsp;It was a <u>cover up</u>! There is a reason her clothes were so spotless!</p>
-			<p onclick="clue(2, false)">2.&emsp;Kind of like Lenin circa 1953 or a Babybel today?</p>
-			<p onclick="clue(3, false)">3.&emsp;<q>If you step that way you might be resigning</q> - spoken privately</p>
-			<p onclick="clue(4, false)">4.&emsp;Kind of like a drunken sailor or Bo Peep, <a href="https://www.youtube.com/watch?v=bvERHB02U6c" style="color: #0056b3; text-decoration: underline">as of recant?</a></p>
-			<p onclick="clue(5, false)">5.&emsp;Don&rsquo;t move, <u>He</u> doesn&rsquo;t move</p>
+			<p onclick="clue(1, false)">1.&emsp;Vamos a la playa</p>
+			<p onclick="clue(2, false)">2.&emsp;Those Greek males are known for being dominate and controlling</p>
+			<p onclick="clue(3, false)">3.&emsp;The only kind of duper.</p>
+			<p onclick="clue(4, false)">4.&emsp;Not much of a go-getter? Likes to sit in running cars that aren&rsquo;t moving</p>
+			<p onclick="clue(5, false)">5.&emsp;That&rsquo;s suspicious</p>
 		</div>
 		<div id="solved" class="invisable">
 			<div>
