--- a/crossword/crossword21.html
+++ b/crossword/crossword21.html
@@ -57,7 +57,7 @@
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
 			<p onclick="clue(1, true)">1.&emsp;Needed to make pesto!</p>
 			<p onclick="clue(6, true)">6.&emsp;I had some ideas for this clue, but they all escape me</p>
-			<p onclick="clue(11, true)">7.&emsp;Making one of these products might require a corer or a parer to make.</p>
+			<p onclick="clue(11, true)">7.&emsp;Making one of these products might require a corer or a parer.</p>
 			<p onclick="clue(16, true)">8.&emsp;Do it up, Charlie!</p>
 			<p onclick="clue(21, true)">9.&emsp;First name of my stylish policeman</p>
 		</div>
