--- a/crossword/crossword20.html
+++ b/crossword/crossword20.html
@@ -58,9 +58,9 @@
 		</table>
 		<div id="across">
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
-			<p onclick="clue(1, true)">1.&emsp;She couldn&rsquo;t become a priest so she became Hindu</p>
+			<p onclick="clue(1, true)">1.&emsp;Hindu teacher</p>
 			<p onclick="clue(6, true)">6.&emsp;Set that jar free! Maybe he will form a secret society?</p>
-			<p onclick="clue(11, true)">7.&emsp;An <q>element</q> of marriage can be changing your last name?</p>
+			<p onclick="clue(11, true)">7.&emsp;An <q>element</q> of union can be changing your last name?</p>
 			<p onclick="clue(16, true)">8.&emsp;When a tree falls, does it become a city? At one point, maybe an amusement park?</p>
 			<p onclick="clue(21, true)">9.&emsp;Maybe he was praying, or maybe he was talking to a child</p>
 		</div>
