--- a/crossword/crossword22.html
+++ b/crossword/crossword22.html
@@ -65,7 +65,7 @@
 			<p><b>&emsp;&emsp;&emsp;Down</b></p>
 			<p onclick="clue(1, false)">1.&emsp;Not now! <u>&emsp;&emsp;&emsp;&emsp;&emsp;</u>! Soon!</p>
 			<p onclick="clue(2, false)">2.&emsp;Put up with</p>
-			<p onclick="clue(3, false)">3.&emsp;An instant, college-sudent classic!</p>
+			<p onclick="clue(3, false)">3.&emsp;An instant, college-student classic!</p>
 			<p onclick="clue(4, false)">4.&emsp;Forgive me father, for I have sinned</p>
 			<p onclick="clue(5, false)">5.&emsp;Taste, for example. Alternatively, logic</p>
 		</div>
