--- a/crossword/crossword23.html
+++ b/crossword/crossword23.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>5x5 crossword 10</title>
+		<title>5x5 crossword 23</title>
 		<link rel="stylesheet" href="style.css"/>
-		<script>let goal = "scarecabalovoidreuseester"; let crossnum = 9</script>
+		<script>let goal = "squadcuterarisetacossnaps"; let crossnum = 22</script>
 		<script src="script.js"></script>
 		<link rel="shortcut icon" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<link rel="icon" type="../image/png" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=no">
-		<meta property="og:title" content="5x5 crossword 10" />
-		<meta property="og:description" content="The tenth five-by-five crossword in a series of twenty-five." />
+		<meta property="og:title" content="5x5 crossword 23" />
+		<meta property="og:description" content="The twenty-third five-by-five crossword in a series of twenty-five." />
 		<meta property="og:image" content="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/preview.png" />
 	</head>
 	<body>
 		<h1 id="settings" onclick="opensettings()">&#9881;</h1><h1 id="backbutton"><a href="index.html">&#x279E;</a></h1>
-		<h1>crossword 10</h1>
+		<h1>crossword 23</h1>
 		<input id="dummyinput" onfocusout="deselect()" oninput="dummyinput()"></input>
 		<table id="crossword">
 			<tr>
@@ -55,19 +55,19 @@
 		</table>
 		<div id="across">
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
-			<p onclick="clue(1, true)">1.&emsp;Hiccup cure</p>
-			<p onclick="clue(6, true)">6.&emsp;It&rsquo;s who&rsquo;s <i>really</i> in charge</p>
-			<p onclick="clue(11, true)">7.&emsp;Sort of a deformed circle</p>
-			<p onclick="clue(16, true)">8.&emsp;Do this after reducing but before recycling</p>
-			<p onclick="clue(21, true)">9.&emsp;A class of often fragrant organic compounds</p>
+			<p onclick="clue(1, true)">1.&emsp;A gaggle of pals</p>
+			<p onclick="clue(6, true)">6.&emsp;More sweet and charming</p>
+			<p onclick="clue(11, true)">7.&emsp;Frankenstein, to his monster</p>
+			<p onclick="clue(16, true)">8.&emsp;A food where the price has no bearing on quality</p>
+			<p onclick="clue(21, true)">9.&emsp;Something the jets and poetry patrons share</p>
 		</div>
 		<div id="down">
 			<p><b>&emsp;&emsp;&emsp;Down</b></p>
-			<p onclick="clue(1, false)">1.&emsp;Something done to films or bread dough</p>
-			<p onclick="clue(2, false)">2.&emsp;Give in or collapses</p>
-			<p onclick="clue(3, false)">3.&emsp;Almost nearly</p>
-			<p onclick="clue(4, false)">4.&emsp;Something a union might get you</p>
-			<p onclick="clue(5, false)">5.&emsp;Someone wise, perhaps?</p>
+			<p onclick="clue(1, false)">1.&emsp;Scoop, dadoobeda ta tah, twee-da, twee-da, badeebadooda</p>
+			<p onclick="clue(2, false)">2.&emsp;Sequel to the Torah and the Psalms</p>
+			<p onclick="clue(3, false)">3.&emsp;Place where people don&rsquo;t call hamburgers <q>steamed hams</q></p>
+			<p onclick="clue(4, false)">4.&emsp;Of fable fame?</p>
+			<p onclick="clue(5, false)">5.&emsp;Do it to impress!</p>
 		</div>
 		<div id="solved" class="invisable">
 			<div>
