--- a/crossword/crossword10.html
+++ b/crossword/crossword10.html
@@ -64,7 +64,7 @@
 		<div id="down">
 			<p><b>&emsp;&emsp;&emsp;Down</b></p>
 			<p onclick="clue(1, false)">1.&emsp;Something done to films or bread dough</p>
-			<p onclick="clue(2, false)">2.&emsp;Give in or collapses</p>
+			<p onclick="clue(2, false)">2.&emsp;Gives in or collapses</p>
 			<p onclick="clue(3, false)">3.&emsp;Almost nearly</p>
 			<p onclick="clue(4, false)">4.&emsp;Something a union might get you</p>
 			<p onclick="clue(5, false)">5.&emsp;Someone wise, perhaps?</p>
