--- a/detective/index.html
+++ b/detective/index.html
@@ -4,6 +4,12 @@
 		<title>Songs of the Detective</title>
 		<link rel="stylesheet" href="style.css"/>
 		<script src="script.js"></script>
+		<link rel="shortcut icon" href="https://raw.githubusercontent.com/EwonRael/EwonRael.github.io/master/detective/cover.png">
+		<link rel="icon" type="../image/png" href="https://raw.githubusercontent.com/EwonRael/EwonRael.github.io/master/detective/cover.png">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta property="og:title" content="Songs of the Detective" />
+		<meta property="og:description" content="Multi-track listening experience!" />
+		<meta property="og:image" content="https://raw.githubusercontent.com/EwonRael/EwonRael.github.io/master/detective/cover.jpg" />
 	</head>
 	<body>
 		<div id="song_picker">
