--- a/detective/index.html
+++ b/detective/index.html
@@ -18,11 +18,11 @@
 		<div id="playbutton">
 			<button onclick="playsound()" id="play">&#x25B6;</button>
 		</div>
-		<audio id="bass" mediagroup="music" src="music/bass.ogg"></audio>
-		<audio id="clarinet" mediagroup="music" src="music/clarinet.ogg"></audio>
-		<audio id="narration" mediagroup="music" src="music/narration.ogg"></audio>
-		<audio id="piano" mediagroup="music" src="music/piano.ogg"></audio>
-		<audio id="snaps" mediagroup="music" src="music/snaps.ogg"></audio>
+		<audio id="bass" mediagroup="music" preload="auto" src="music/bass.ogg"></audio>
+		<audio id="clarinet" mediagroup="music" preload="auto" src="music/clarinet.ogg"></audio>
+		<audio id="narration" mediagroup="music" preload="auto" src="music/narration.ogg"></audio>
+		<audio id="piano" mediagroup="music" preload="auto" src="music/piano.ogg"></audio>
+		<audio id="snaps" mediagroup="music" preload="auto" src="music/snaps.ogg"></audio>
 		<input id="timeline" type="range" min="0" max="2168" value="0" oninput="setAudio(this.value)">
 		<div id="volume_sliders">
 			<h2>Volume Control:</h2>
