--- a/detective/index.html
+++ b/detective/index.html
@@ -18,6 +18,11 @@
 		<div id="playbutton">
 			<button onclick="playsound()" id="play">&#x25B6;</button>
 		</div>
+		<div id="flexcontain">
+			<h1 id="backtrack" onclick="backtrack()">&#x23EE;</h1>
+			<h1 id="track-title">Chapter 01: Doing big things? You figure that one out.</h1>
+			<h1 id="forwardtrack" onclick="forwardtrack()">&#x23ED;</h1>
+		</div>
 		<audio id="bass" mediagroup="music" preload="auto" src="music/bass.ogg"></audio>
 		<audio id="clarinet" mediagroup="music" preload="auto" src="music/clarinet.ogg"></audio>
 		<audio id="narration" mediagroup="music" preload="auto" src="music/narration.ogg"></audio>
@@ -29,8 +34,8 @@
 			<p> Narration: <input type="range" min="0" max="100" value="90" oninput="narration.volume = this.value/100" id="vol_narration"> </p>
 			<p> Bass: <input type="range" min="0" max="100" value="90" oninput="bass.volume = this.value/100" id="vol_bass"> </p>
 			<p> Clarinet: <input type="range" min="0" max="100" value="90" oninput="clarinet.volume = this.value/100" id="vol_clarinet"> </p>
-			<p> Piano: <input type="range" min="0" max="100" value="90" oninput="piano.volume = this.value/100" id="vol_piano"> </p>
 			<p> Hand Sounds: <input type="range" min="0" max="100" value="90" oninput="snaps.volume = this.value/100" id="vol_snaps"> </p>
+			<p> Piano: <input type="range" min="0" max="100" value="90" oninput="piano.volume = this.value/100" id="vol_piano"> </p>
 		</div>
 	</body>
 </html>
