--- a/detective/index.html
+++ b/detective/index.html
@@ -19,9 +19,9 @@
 			<button onclick="playsound()" id="play">&#x25B6;</button>
 		</div>
 		<div id="flexcontain">
-			<h1 id="backtrack" onclick="backtrack()">&#x23EE;</h1>
-			<h1 id="track-title">Chapter 01: Doing big things? You figure that one out.</h1>
-			<h1 id="forwardtrack" onclick="forwardtrack()">&#x23ED;</h1>
+			<p id="backtrack" onclick="backtrack()">&#x23EE;</p>
+			<p id="track-title">Chapter 01: Doing big things? You figure that one out.</p>
+			<p id="forwardtrack" onclick="forwardtrack()">&#x23ED;</p>
 		</div>
 		<audio id="bass" mediagroup="music" preload="auto" src="music/bass.ogg"></audio>
 		<audio id="clarinet" mediagroup="music" preload="auto" src="music/clarinet.ogg"></audio>
