--- a/detective/index.html
+++ b/detective/index.html
@@ -9,7 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta property="og:title" content="Songs of the Detective" />
 		<meta property="og:description" content="Multi-track listening experience!" />
-		<meta property="og:image" content="https://raw.githubusercontent.com/EwonRael/EwonRael.github.io/master/detective/cover.jpg" />
+		<meta property="og:image" content="https://raw.githubusercontent.com/EwonRael/EwonRael.github.io/master/detective/cover.png" />
 	</head>
 	<body>
 		<div id="song_picker">
