--- a/crossword-squared/02.html
+++ b/crossword-squared/02.html
@@ -56,7 +56,7 @@
 		<div id="across">
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
 			<p onclick="clue(1, true)">1.&emsp;Green Mario?</u></p>
-			<p onclick="clue(6, true)">6.&emsp;Adjective seemingly only used to describe days</p>
+			<p onclick="clue(6, true)">6.&emsp;Adjective seemingly only used to describe days or time</p>
 			<p onclick="clue(11, true)">7.&emsp;There was a period of time where I was frugal</p>
 			<p onclick="clue(16, true)">8.&emsp;Orange Burt?</p>
 			<p onclick="clue(21, true)">9.&emsp;An even wiser person who clears out bad energy</p>
