--- a/crossword-squared/02.html
+++ b/crossword-squared/02.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>5x5 crossword 02</title>
 		<link rel="stylesheet" href="style.css"/>
-		<script>let goal = "luigioldenstinterniesager"; let crossnum = 0</script>
+		<script>let goal = "luigioldenstinterniesager"; let crossnum = 1</script>
 		<script src="script.js"></script>
 		<link rel="shortcut icon" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<link rel="icon" type="../image/png" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
@@ -59,13 +59,13 @@
 			<p onclick="clue(6, true)">6.&emsp;Adjective seemingly only used to describe days or time</p>
 			<p onclick="clue(11, true)">7.&emsp;There was a period of time where I was frugal</p>
 			<p onclick="clue(16, true)">8.&emsp;Orange Burt?</p>
-			<p onclick="clue(21, true)">9.&emsp;An even wiser person who clears out bad energy</p>
+			<p onclick="clue(21, true)">9.&emsp;An even wiser person who smokes out bad energy</p>
 		</div>
 		<div id="down">
 			<p><b>&emsp;&emsp;&emsp;Down</b></p>
 			<p onclick="clue(1, false)">1.&emsp;Rocky does this</p>
-			<p onclick="clue(2, false)">2.&emsp;Bolder than bold!</p>
-			<p onclick="clue(3, false)">3.&emsp;What I do in a typical day as an egg timer</p>
+			<p onclick="clue(2, false)">2.&emsp;In fonts, bolder than bold!</p>
+			<p onclick="clue(3, false)">3.&emsp;As a doorbell, before I dong <u>&emsp;&emsp;&emsp;&emsp;&emsp;</u></p>
 			<p onclick="clue(4, false)">4.&emsp;Comes in a bottle, but not a can!</p>
 			<p onclick="clue(5, false)">5.&emsp;To bury in a grave.</p>
 		</div>
