--- a/crossword-squared/02.html
+++ b/crossword-squared/02.html
@@ -57,7 +57,7 @@
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
 			<p onclick="clue(1, true)">1.&emsp;Green Mario?</u></p>
 			<p onclick="clue(6, true)">6.&emsp;Adjective seemingly only used to describe days or time</p>
-			<p onclick="clue(11, true)">7.&emsp;There was a period of time where I was frugal</p>
+			<p onclick="clue(11, true)">7.&emsp;A stretch or a number both whole and holy</p>
 			<p onclick="clue(16, true)">8.&emsp;Orange Burt?</p>
 			<p onclick="clue(21, true)">9.&emsp;An even wiser person who smokes out bad energy</p>
 		</div>
@@ -91,4 +91,3 @@
 		</div>
 	</body>
 </html>
-
