--- a/crossword-squared/03.html
+++ b/crossword-squared/03.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>5x5 crossword 02</title>
+		<title>5x5 crossword 03</title>
 		<link rel="stylesheet" href="style.css"/>
-		<script>let goal = "luigioldenstinterniesager"; let crossnum = 1</script>
+		<script>let goal = "tramsradioaioliisselleers"; let crossnum = 2</script>
 		<script src="script.js"></script>
 		<link rel="shortcut icon" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<link rel="icon" type="../image/png" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=no">
-		<meta property="og:title" content="5x5 crossword 02" />
-		<meta property="og:description" content="The second five-by-five crossword in a series of twenty-five." />
+		<meta property="og:title" content="5x5 crossword 03" />
+		<meta property="og:description" content="The third five-by-five crossword in a series of twenty-five." />
 		<meta property="og:image" content="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/preview.png" />
 	</head>
 	<body>
@@ -55,19 +55,19 @@
 		</table>
 		<div id="across">
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
-			<p onclick="clue(1, true)">1.&emsp;Green Mario?</u></p>
-			<p onclick="clue(6, true)">6.&emsp;Adjective seemingly only used to describe days or time</p>
-			<p onclick="clue(11, true)">7.&emsp;A stretch or a number both whole and holy</p>
-			<p onclick="clue(16, true)">8.&emsp;Orange Burt?</p>
-			<p onclick="clue(21, true)">9.&emsp;An even wiser person who smokes out bad energy</p>
+			<p onclick="clue(1, true)">1.&emsp;Short distance trains</u></p>
+			<p onclick="clue(6, true)">6.&emsp;Type of star</p>
+			<p onclick="clue(11, true)">7.&emsp;When a restaurant is ashamed of their mayonnaise</p>
+			<p onclick="clue(16, true)">8.&emsp;Former Nugget or international river?</p>
+			<p onclick="clue(21, true)">9.&emsp;Sexily side eyes</p>
 		</div>
 		<div id="down">
 			<p><b>&emsp;&emsp;&emsp;Down</b></p>
-			<p onclick="clue(1, false)">1.&emsp;Rocky does this</p>
-			<p onclick="clue(2, false)">2.&emsp;In fonts, bolder than bold!</p>
-			<p onclick="clue(3, false)">3.&emsp;As a doorbell, before I dong <u>&emsp;&emsp;&emsp;&emsp;&emsp;</u></p>
-			<p onclick="clue(4, false)">4.&emsp;Comes in a bottle, but not a can!</p>
-			<p onclick="clue(5, false)">5.&emsp;To bury in a grave.</p>
+			<p onclick="clue(1, false)">1.&emsp;Type of mix or perhaps a rugged path</p>
+			<p onclick="clue(2, false)">2.&emsp;Uplift</p>
+			<p onclick="clue(3, false)">3.&emsp;Equivalent to two 200mg pills</p>
+			<p onclick="clue(4, false)">4.&emsp;Athlete who runs a 1.6K</p>
+			<p onclick="clue(5, false)">5.&emsp;Stains, spoils, spots, splashes, spatters, splatters, soots, smutches, smudges, smokes, smirches, smears, sleazes, slanders, shames...</p>
 		</div>
 		<div id="solved" class="invisable">
 			<div>
