--- a/crossword-squared/03.html
+++ b/crossword-squared/03.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<h1 id="settings" onclick="opensettings()">&#9881;</h1><h1 id="backbutton"><a href="index.html">&#x279E;</a></h1>
-		<h1>crossword 02</h1>
+		<h1>crossword 03</h1>
 		<input id="dummyinput" onfocusout="deselect()" oninput="dummyinput()"></input>
 		<table id="crossword">
 			<tr>
@@ -65,7 +65,7 @@
 			<p><b>&emsp;&emsp;&emsp;Down</b></p>
 			<p onclick="clue(1, false)">1.&emsp;Type of mix or perhaps a rugged path</p>
 			<p onclick="clue(2, false)">2.&emsp;Uplift</p>
-			<p onclick="clue(3, false)">3.&emsp;Equivalent to two 200mg pills</p>
+			<p onclick="clue(3, false)">3.&emsp;Two 200mg pills, for example</p>
 			<p onclick="clue(4, false)">4.&emsp;Athlete who runs a 1.6K</p>
 			<p onclick="clue(5, false)">5.&emsp;Stains, spoils, spots, splashes, spatters, splatters, soots, smutches, smudges, smokes, smirches, smears, sleazes, slanders, shames...</p>
 		</div>
