--- a/crossword-squared/01.html
+++ b/crossword-squared/01.html
@@ -1,94 +1,57 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>5x5 crossword 01</title>
+		<title>5x5 crossword puzzles</title>
 		<link rel="stylesheet" href="style.css"/>
-		<script>let goal = "iwilltibiasleekimagenames"; let crossnum = 0</script>
-		<script src="script.js"></script>
+		<script src="homescript.js"></script>
 		<link rel="shortcut icon" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<link rel="icon" type="../image/png" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=no">
-		<meta property="og:title" content="5x5 crossword 01" />
-		<meta property="og:description" content="The first five-by-five crossword in a series of twenty-five." />
+		<meta property="og:title" content="5x5 crossword puzzles" />
+		<meta property="og:description" content="A series of five-by-five crossword puzzles." />
 		<meta property="og:image" content="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/preview.png" />
 	</head>
 	<body>
-		<h1 id="settings" onclick="opensettings()">&#9881;</h1><h1 id="backbutton"><a href="index.html">&#x279E;</a></h1>
-		<h1>crossword 01</h1>
-		<input id="dummyinput" onfocusout="deselect()" oninput="dummyinput()"></input>
-		<table id="crossword">
+		<h1>square crosswords&#178;</h1>
+		<div id="explain">
+			<p>This is the second series of five-by-five crossword puzzles. Click <a href="https://ewonrael.github.io/crossword/" style="color: #0056b3; text-decoration: underline">here</a> to visit the first series. Click on a number to attempt the corresponding crossword. Solved puzzles will turn green.</p>
+		</div>
+		<table id="crosswordPicker">
 			<tr>
-				<td onclick="select(1)" id="1">&emsp;</td>
-				<td onclick="select(2)" id="2">&emsp;</td>
-				<td onclick="select(3)" id="3">&emsp;</td>
-				<td onclick="select(4)" id="4">&emsp;</td>
-				<td onclick="select(5)" id="5">&emsp;</td>
+				<td id="1"><a href="01.html">01</a></td>
+				<td id="2"><a href="02.html">02</a></td>
+				<td id="3"><a href="03.html">03</a></td>
+				<td id="4"><a href="04.html">04</a></td>
+				<td id="5"><svg xmlns="http://www.w3.org/2000/svg" height="0.8em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M144 144v48H304V144c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192V144C80 64.5 144.5 0 224 0s144 64.5 144 144v48h16c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V256c0-35.3 28.7-64 64-64H80z"/></svg></td>
 			</tr>
 			<tr>
-				<td onclick="select(6)" id="6">&emsp;</td>
-				<td onclick="select(7)" id="7">&emsp;</td>
-				<td onclick="select(8)" id="8">&emsp;</td>
-				<td onclick="select(9)" id="9">&emsp;</td>
-				<td onclick="select(10)" id="10">&emsp;</td>
+				<td id="6"><svg xmlns="http://www.w3.org/2000/svg" height="0.8em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M144 144v48H304V144c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192V144C80 64.5 144.5 0 224 0s144 64.5 144 144v48h16c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V256c0-35.3 28.7-64 64-64H80z"/></svg></td>
+				<td id="7"><svg xmlns="http://www.w3.org/2000/svg" height="0.8em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M144 144v48H304V144c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192V144C80 64.5 144.5 0 224 0s144 64.5 144 144v48h16c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V256c0-35.3 28.7-64 64-64H80z"/></svg></td>
+				<td id="8"><svg xmlns="http://www.w3.org/2000/svg" height="0.8em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M144 144v48H304V144c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192V144C80 64.5 144.5 0 224 0s144 64.5 144 144v48h16c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V256c0-35.3 28.7-64 64-64H80z"/></svg></td>
+				<td id="9"><svg xmlns="http://www.w3.org/2000/svg" height="0.8em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M144 144v48H304V144c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192V144C80 64.5 144.5 0 224 0s144 64.5 144 144v48h16c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V256c0-35.3 28.7-64 64-64H80z"/></svg></td>
+				<td id="10"><svg xmlns="http://www.w3.org/2000/svg" height="0.8em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M144 144v48H304V144c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192V144C80 64.5 144.5 0 224 0s144 64.5 144 144v48h16c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V256c0-35.3 28.7-64 64-64H80z"/></svg></td>
 			</tr>
 			<tr>
-				<td onclick="select(11)" id="11">&emsp;</td>
-				<td onclick="select(12)" id="12">&emsp;</td>
-				<td onclick="select(13)" id="13">&emsp;</td>
-				<td onclick="select(14)" id="14">&emsp;</td>
-				<td onclick="select(15)" id="15">&emsp;</td>
+				<td id="11"><svg xmlns="http://www.w3.org/2000/svg" height="0.8em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M144 144v48H304V144c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192V144C80 64.5 144.5 0 224 0s144 64.5 144 144v48h16c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V256c0-35.3 28.7-64 64-64H80z"/></svg></td>
+				<td id="12"><svg xmlns="http://www.w3.org/2000/svg" height="0.8em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M144 144v48H304V144c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192V144C80 64.5 144.5 0 224 0s144 64.5 144 144v48h16c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V256c0-35.3 28.7-64 64-64H80z"/></svg></td>
+				<td id="13"><svg xmlns="http://www.w3.org/2000/svg" height="0.8em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M144 144v48H304V144c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192V144C80 64.5 144.5 0 224 0s144 64.5 144 144v48h16c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V256c0-35.3 28.7-64 64-64H80z"/></svg></td>
+				<td id="14"><svg xmlns="http://www.w3.org/2000/svg" height="0.8em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M144 144v48H304V144c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192V144C80 64.5 144.5 0 224 0s144 64.5 144 144v48h16c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V256c0-35.3 28.7-64 64-64H80z"/></svg></td>
+				<td id="15"><svg xmlns="http://www.w3.org/2000/svg" height="0.8em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M144 144v48H304V144c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192V144C80 64.5 144.5 0 224 0s144 64.5 144 144v48h16c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V256c0-35.3 28.7-64 64-64H80z"/></svg></td>
 			</tr>
 			<tr>
-				<td onclick="select(16)" id="16">&emsp;</td>
-				<td onclick="select(17)" id="17">&emsp;</td>
-				<td onclick="select(18)" id="18">&emsp;</td>
-				<td onclick="select(19)" id="19">&emsp;</td>
-				<td onclick="select(20)" id="20">&emsp;</td>
+				<td id="16"><svg xmlns="http://www.w3.org/2000/svg" height="0.8em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M144 144v48H304V144c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192V144C80 64.5 144.5 0 224 0s144 64.5 144 144v48h16c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V256c0-35.3 28.7-64 64-64H80z"/></svg></td>
+				<td id="17"><svg xmlns="http://www.w3.org/2000/svg" height="0.8em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M144 144v48H304V144c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192V144C80 64.5 144.5 0 224 0s144 64.5 144 144v48h16c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V256c0-35.3 28.7-64 64-64H80z"/></svg></td>
+				<td id="18"><svg xmlns="http://www.w3.org/2000/svg" height="0.8em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M144 144v48H304V144c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192V144C80 64.5 144.5 0 224 0s144 64.5 144 144v48h16c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V256c0-35.3 28.7-64 64-64H80z"/></svg></td>
+				<td id="19"><svg xmlns="http://www.w3.org/2000/svg" height="0.8em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M144 144v48H304V144c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192V144C80 64.5 144.5 0 224 0s144 64.5 144 144v48h16c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V256c0-35.3 28.7-64 64-64H80z"/></svg></td>
+				<td id="20"><svg xmlns="http://www.w3.org/2000/svg" height="0.8em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M144 144v48H304V144c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192V144C80 64.5 144.5 0 224 0s144 64.5 144 144v48h16c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V256c0-35.3 28.7-64 64-64H80z"/></svg></td>
 			</tr>
 			<tr>
-				<td onclick="select(21)" id="21">&emsp;</td>
-				<td onclick="select(22)" id="22">&emsp;</td>
-				<td onclick="select(23)" id="23">&emsp;</td>
-				<td onclick="select(24)" id="24">&emsp;</td>
-				<td onclick="select(25)" id="25">&emsp;</td>
+				<td id="21"><svg xmlns="http://www.w3.org/2000/svg" height="0.8em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M144 144v48H304V144c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192V144C80 64.5 144.5 0 224 0s144 64.5 144 144v48h16c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V256c0-35.3 28.7-64 64-64H80z"/></svg></td>
+				<td id="22"><svg xmlns="http://www.w3.org/2000/svg" height="0.8em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M144 144v48H304V144c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192V144C80 64.5 144.5 0 224 0s144 64.5 144 144v48h16c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V256c0-35.3 28.7-64 64-64H80z"/></svg></td>
+				<td id="23"><svg xmlns="http://www.w3.org/2000/svg" height="0.8em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M144 144v48H304V144c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192V144C80 64.5 144.5 0 224 0s144 64.5 144 144v48h16c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V256c0-35.3 28.7-64 64-64H80z"/></svg></td>
+				<td id="24"><svg xmlns="http://www.w3.org/2000/svg" height="0.8em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M144 144v48H304V144c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192V144C80 64.5 144.5 0 224 0s144 64.5 144 144v48h16c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V256c0-35.3 28.7-64 64-64H80z"/></svg></td>
+				<td id="25"><svg xmlns="http://www.w3.org/2000/svg" height="0.8em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M144 144v48H304V144c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192V144C80 64.5 144.5 0 224 0s144 64.5 144 144v48h16c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V256c0-35.3 28.7-64 64-64H80z"/></svg></td>
 			</tr>
 		</table>
-		<div id="across">
-			<p><b>&emsp;&emsp;&emsp;Across</b></p>
-			<p onclick="clue(1, true)">1.&emsp;Will I wait a lonely lifetime? If you want me to <u>&emsp;&emsp;&emsp;&emsp;&emsp;</u></p>
-			<p onclick="clue(6, true)">6.&emsp;Shinbone</p>
-			<p onclick="clue(11, true)">7.&emsp;Describes hair or a new car?</p>
-			<p onclick="clue(16, true)">8.&emsp;Spitting <u>&emsp;&emsp;&emsp;&emsp;&emsp;</u></p>
-			<p onclick="clue(21, true)">9.&emsp;Plenty of these are needed for a family game?</p>
-		</div>
-		<div id="down">
-			<p><b>&emsp;&emsp;&emsp;Down</b></p>
-			<p onclick="clue(1, false)">1.&emsp;Either the exclamation of an excited golfer or a caveman explaining why we don&rsquo;t covet</p>
-			<p onclick="clue(2, false)">2.&emsp;Chloe&rsquo;s name for a befriended stray</p>
-			<p onclick="clue(3, false)">3.&emsp;Steel joist, used in construction and named after it&rsquo;s cross-section.</p>
-			<p onclick="clue(4, false)">4.&emsp;<q>My lord,</q> says the Belgian</p>
-			<p onclick="clue(5, false)">5.&emsp;The things a famous L.A. sports team is named after.</p>
-		</div>
-		<div id="solved" class="invisable">
-			<div>
-			<p><b>You solved the crossword!</b></p>
-			<p id="timer"></p>
-			<button onclick='document.getElementById("solved").classList.add("invisable")'>admire</button>
-			<button onclick="redo()">redo</button>
-			</div>
-		</div>
-		<div id="mobilePreview" class="invisable">
-			<p id="previewBox">1.&emsp;Involuntary muscle contraction</p>
-		</div>
-		<div id="settingbox" class="invisable">
-			<div>
-			<p><b>Settings:</b></p>
-			<p onclick="settings(this,0)">&#x2610; timer</p>
-			<p onclick="settings(this,1)">&#x2610; highlight correct words</p>
-			<p onclick="settings(this,2)">&#x2610; highlight correct letters</p><br>
-			<button onclick='document.getElementById("settingbox").classList.add("invisable")'>done!</button>
-			</div>
-		</div>
 	</body>
 </html>
-
