--- a/crossword-squared/06.html
+++ b/crossword-squared/06.html
@@ -58,19 +58,19 @@
 		</table>
 		<div id="down">
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
-			<p onclick="clue(1, false)">1.&emsp;A diabolical brand</p>
-			<p onclick="clue(2, false)">2.&emsp;Presumably this was done to sporting judges</p>
-			<p onclick="clue(3, false)">3.&emsp;The plight of a stricken cormorant</p>
-			<p onclick="clue(4, false)">4.&emsp;Mutual Absorption</p>
-			<p onclick="clue(5, false)">5.&emsp;Nowhere can be found such sheriffs; Belonging to Luke Skywalker's uncle</p>
+			<p onclick="clue(1, true)">1.&emsp;A diabolical brand</p>
+			<p onclick="clue(6, true)">6.&emsp;Presumably this was done to sporting judges</p>
+			<p onclick="clue(11, true)">7.&emsp;The plight of a stricken cormorant</p>
+			<p onclick="clue(16, true)">8.&emsp;Mutual Absorption</p>
+			<p onclick="clue(21, false)">9.&emsp;Nowhere can be found such sheriffs; Belonging to Luke Skywalker's uncle</p>
 		</div>
 		<div id="across">
 			<p><b>&emsp;&emsp;&emsp;Down</b></p>
-			<p onclick="clue(1, true)">1.&emsp;If you end with Alpha, the Greek alphabet starts with one; the first Al or Levi to come to mind</p>
-			<p onclick="clue(6, true)">6.&emsp;The best alternative to returning a library book</p>
-			<p onclick="clue(11, true)">7.&emsp;All ships begin with one of these</p>
-			<p onclick="clue(16, true)">8.&emsp;Take an action beneath one's dignity</p>
-			<p onclick="clue(21, true)">9.&emsp;A pirate's favourite miserables, or the child of a north English family</p>
+			<p onclick="clue(1, false)">1.&emsp;If you end with Alpha, the Greek alphabet starts with one; the first Al or Levi to come to mind</p>
+			<p onclick="clue(2, false)">2.&emsp;The best alternative to returning a library book</p>
+			<p onclick="clue(3, false)">3.&emsp;All ships begin with one of these</p>
+			<p onclick="clue(4, false)">4.&emsp;Take an action beneath one's dignity</p>
+			<p onclick="clue(5, false)">5.&emsp;A pirate's favourite miserables, or the child of a north English family</p>
 		</div>
 		<div id="solved" class="invisable">
 			<div>
