--- a/crossword-squared/07.html
+++ b/crossword-squared/07.html
@@ -57,17 +57,17 @@
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
 			<p onclick="clue(1, true)">1.&emsp;Eighteenth century French revolutionary leader, Jean-Paul</p>
 			<p onclick="clue(6, true)">6.&emsp;Fish oil is high in a fatty acid?</p>
-			<p onclick="clue(11, true)">7.&emsp;Break from the heat of desert</p>
+			<p onclick="clue(11, true)">7.&emsp;Breaks from the heat of desert</p>
 			<p onclick="clue(16, true)">8.&emsp;Like <q>email</q> but for underground publications</p>
 			<p onclick="clue(21, true)">9.&emsp;Strangers have added these to my car</p>
 		</div>
 		<div id="down">
 			<p><b>&emsp;&emsp;&emsp;Down</b></p>
-			<p onclick="clue(1, false)">1.&emsp;Cow expresses it shares the sentiment. <q>That&rsquo;s relatable</q></p>
+			<p onclick="clue(1, false)">1.&emsp;Cow expressed it shares the sentiment. <q>That&rsquo;s relatable</q></p>
 			<p onclick="clue(2, false)">2.&emsp;Describes a labyrinth of corn that will wonder and astonish!</p>
 			<p onclick="clue(3, false)">3.&emsp;Gives violin bow its edge, alternatively, to commit adultery a second time</p>
 			<p onclick="clue(4, false)">4.&emsp;Could be a realtor, could be a double?</p>
-			<p onclick="clue(5, false)">5.&emsp;I find this use of excessive force shocking!</p>
+			<p onclick="clue(5, false)">5.&emsp;I find the using of excessive force shocking!</p>
 		</div>
 		<div id="solved" class="invisable">
 			<div>
@@ -91,5 +91,4 @@
 		</div>
 	</body>
 </html>
-
 
