--- a/crossword-squared/06.html
+++ b/crossword-squared/06.html
@@ -58,11 +58,11 @@
 		</table>
 		<div id="across">
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
-			<p onclick="clue(1, flase)">1.&emsp;A diabolical brand</p>
+			<p onclick="clue(1, true)">1.&emsp;A diabolical brand</p>
 			<p onclick="clue(6, true)">6.&emsp;Presumably this was done to sporting judges</p>
 			<p onclick="clue(11, true)">7.&emsp;The plight of a stricken cormorant</p>
 			<p onclick="clue(16, true)">8.&emsp;Mutual Absorption</p>
-			<p onclick="clue(21, false)">9.&emsp;Nowhere can be found such sheriffs; Belonging to Luke Skywalker's uncle</p>
+			<p onclick="clue(21, true)">9.&emsp;Nowhere can be found such sheriffs; Belonging to Luke Skywalker's uncle</p>
 		</div>
 		<div id="down">
 			<p><b>&emsp;&emsp;&emsp;Down</b></p>
