--- a/crossword-squared/01.html
+++ b/crossword-squared/01.html
@@ -67,7 +67,7 @@
 			<p onclick="clue(2, false)">2.&emsp;Chloe&rsquo;s name for a befriended stray</p>
 			<p onclick="clue(3, false)">3.&emsp;Steel joist, used in construction and named after it&rsquo;s cross-section.</p>
 			<p onclick="clue(4, false)">4.&emsp;<q>My lord,</q> says the Belgian</p>
-			<p onclick="clue(5, false)">5.&emsp;The things a famous L.A. sports team is named after.</p>
+			<p onclick="clue(5, false)">5.&emsp;Those things a famous L.A. sports team is named after.</p>
 		</div>
 		<div id="solved" class="invisable">
 			<div>
